# ksb_scripts

./: README.md  new_script.py  test.py  test2.py  test3.py  text.txt
haskell/categoriesforprogrammers/: README.md  categoriesforprogrammers.cabal  stack.yaml
haskell/categoriesforprogrammers/.stack-work/install/x86_64-osx/lts-9.5/8.0.2/flag-cache/: bytestring-0.10.8.1-L7iExsmb1Cf5TULWmR5KHP  cereal-0.5.4.0-3bi1813iLeYMP52jAd5wv  cereal-0.5.4.0-4YeFasj1Y0uI017CH2H1S9  containers-0.5.10.2-BsNvjXoQS1iGZ9xbXaQ0Mz  data-category-0.7-9esayNcHtT8KcVNpHtp0Le  directory-1.3.0.0-Iqt7XTqo9JM11Z9mG4GKYL  directory-1.3.1.2-EwNoQtMQK7z2MTw1tMRtSA  unix-2.7.2.1-L45OSgPOCVT2iOTigX33RM
haskell/categoriesforprogrammers/.stack-work/install/x86_64-osx/lts-9.5/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSbytestring-0.10.8.1-L7iExsmb1Cf5TULWmR5KHP-ghc8.0.2.dylib  libHScereal-0.5.4.0-3bi1813iLeYMP52jAd5wv-ghc8.0.2.dylib  libHScereal-0.5.4.0-4YeFasj1Y0uI017CH2H1S9-ghc8.0.2.dylib  libHScontainers-0.5.10.2-BsNvjXoQS1iGZ9xbXaQ0Mz-ghc8.0.2.dylib  libHSdata-category-0.7-9esayNcHtT8KcVNpHtp0Le-ghc8.0.2.dylib  (+3 more)
haskell/categoriesforprogrammers/.stack-work/install/x86_64-osx/lts-9.5/8.0.2/pkgdb/: bytestring-0.10.8.1-L7iExsmb1Cf5TULWmR5KHP.conf  cereal-0.5.4.0-3bi1813iLeYMP52jAd5wv.conf  containers-0.5.10.2-BsNvjXoQS1iGZ9xbXaQ0Mz.conf  data-category-0.7-9esayNcHtT8KcVNpHtp0Le.conf  directory-1.3.1.2-EwNoQtMQK7z2MTw1tMRtSA.conf  package.cache  unix-2.7.2.1-L45OSgPOCVT2iOTigX33RM.conf
haskell/categoriesforprogrammers/src/: Ch1.hs  Ch1.txt  Ch2.hs  Main.hs
(+1258 files in other folders)
